--- a/example.bib
+++ b/example.bib
@@ -13,6 +13,13 @@
   year={1970},
   publisher={Dover Publ.}
 }
+@BOOK{Pimentel1960,
+    author = {Pimentel, G. C. and MClellan, A. L.},
+    title = {The Hydrogen Bond},
+    publisher = {W. H. Freemann, San Francisco},
+    year = {1960},
+    isbn = {}
+}
 @BOOK{Fleming86,
     author = {G. R. Fleming},
     title = {Chemical Applications of Ultrafast Spectroscopy},
@@ -1829,7 +1836,7 @@ abstract= {{Ewald summation expressions are derived for the energy, interatomic 
     url = {https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.6b06371}
 }
 @ARTICLE{Khatib2017,
-author = {R{'e}mi Khatib and Marialore Sulpizi}, 
+author = {Khatib, R. and Sulpizi, M}, 
     title = {{Sum Frequency Generation Spectra from Velocity-Velocity Correlation Functions}},
     journal = {J. Phys. Chem. Lett. },
     year = {2017},
@@ -3468,13 +3475,13 @@ in gas and condensed phases}},
     pages = {3399-3408}
 }
 @BOOK{Burke07,
- author = {Kieron Burke},
+ author = {Burke, Kieron},
     title = {{ABC of Density Functional Theory}},
     year={2007},
     publisher= {Department of Chemistry, University of California, Irvine},
  }
 @ARTICLE{ZhaoY07,
-author = {Y. Zhao and D. G. Truhlar},
+author = {Zhao, Y. and Truhlar, D. G.},
 title = {{Density Functionals with Broad Applicability in Chemistry }},
 journal = {ACCOUNTS OF CHEMICAL RESEARCH},
 year = {2007},
@@ -9073,15 +9080,15 @@ eprint = {
 @MISC{Gang202104,
 	note = {{For OH vibrations at room temperature, the energy difference between vibrational states $|\nu=0\rangle$ and $|\nu=1\rangle$ is about 4500 K, or 0.4 eV, which is much larger than $k_\text{B}T$. Therefore, we can treat the OH like a linear harmonic oscillator.}}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {},
-volume = {},
-number ={},
-pages = {},
-abstract= {{ }}
+@ARTICLE{Tyrode2013,
+author = {Tyrode, Eric and Liljeblad, Jonathan F. D.},
+title = {{Water Structure Next to Ordered and Disordered Hydrophobic Silane Monolayers: A Vibrational Sum Frequency Spectroscopy Study}},
+journal = {J. Phys. Chem. C},
+year = {2013},
+volume = {117},
+number ={4},
+pages = {1780-1790},
+abstract= {{Vibrational sum frequency spectroscopy (VSFS) has been used to study the structure of water in contact to fused silica surfaces, hydrophobically modified with a series of alkyl trichlorosilane monolayers of varying degrees of order. The interfacial molecular structural information was complemented using total internal reflection (TIR) Raman spectroscopy. The silane molecules consisted of octadecyltrichlorosilane (OTS) and its shorter chain analogue with eight carbon atoms. The VSF spectra show a direct correlation between monolayer order and the intensity of the free OH mode, characteristic of straddling water molecules vibrating in direct contact to the hydrophobic layer, with a concurrent reduction of the bands associated with hydrogen bonded water molecules. The results imply that the structure of water in the most ordered monolayers is not much affected beyond the first layer of water molecules, with bulk isotropic properties becoming apparent already at subnanometer distances from the surface. Contact angle measurements with both water and hexadecane were also performed in an effort to relate macroscopically measurable parameters to the molecular surface structure provided by VSFS and TIR Raman. Only the receding contact angles, and in particular those with hexadecane, were found to correlate with the monolayer order. Finally, to obtain an additional insight into the water structure in direct contact to an ordered hydrophobic surface, isotopic dilution experiments with D2O were also performed. They indicate that the vibrational coupling mechanism of water molecules at the hydrophobized solid/water interface is different from what has been observed at the liquid/vapor interface.}}
 }
 @ARTICLE{,
 author = {},
