--- a/example.bib
+++ b/example.bib
@@ -8889,7 +8889,7 @@ abstract= {{Air/aqueous interfaces provide a unique environment for many chemica
 }
 @ARTICLE{Pezzotti2017,
 author = {Simone Pezzotti and Daria Ruth Galimberti and Marie-Pierre Gaigeot},
-title = {{2D H-Bond Network as the Topmost Skin to the Air–Water Interface}},
+title = {{2D H-Bond Network as the Topmost Skin to the Air-Water Interface}},
 journal = {J. Phys. Chem. Lett.},
 year = {2017},
 volume = {8},
