--- a/main.tex
+++ b/main.tex
@@ -315,11 +315,11 @@ Alkali Nitrate Aqueous Solutions from \abinitio Molecular Dynamics} % Your thesi
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-I have analyzed the interfacial structure and dynamics of solutions containing alkali nitrates by Density Functional Theory-based 
-Molecular Dynamics (DFTMD) simulations. In particular I have presented a detailed analysis of the Hydrogen Bond (HB) structure at the interface and 
+The interfacial structure and dynamics of solutions containing alkali nitrates have been studied by Density Functional Theory-based 
+Molecular Dynamics (DFTMD) simulations. In particular we have presented a detailed analysis of the Hydrogen Bond (HB) structure at the interface and 
 have calculated the interface vibrational spectra in order to provide a molecular interpretation of available experimental data.
 %
-When calculating the Vibrational Sum-Frequency Generation (VSFG) spectrum, I used a new approximation method. 
+When calculating the Vibrational Sum-Frequency Generation (VSFG) spectrum, we used a new approximation method. 
 This method ignores the NR part of the spectrum and finally obtains the interface's nonlinear polarizability to 
 infrared incident light through the velocity Auto-Correlation Function (ACF). 
 Based on the calculation of Maximally-Localized Wannier Functions (MLWFs), the parameterization of the spatial gradient of the components of dipole moment 
@@ -328,7 +328,7 @@ transformed into the calculation of the velocity ACF.
 The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental 
 Phase Sensitive Sum-Frequency Generation (PS-SFG) spectrum result.
 
-As a first system I have analyzed the behaviour of a salty interface containing LiNO$_3$.
+As a first system we have analyzed the behaviour of a salty interface containing LiNO$_3$.
 Both the measured and calculated VSFG spectra shows a reduced intensity of the lower frequency portion region,
 when compared to the water/vapor interface.
 This reduction is attributed to the Hydrogen (H-) bonds established between the \nitrate and the surrounding water molecules at the interface.
@@ -342,14 +342,14 @@ and cannot provide a microscopic interpretation of the spectra.
 Realistic models of the interface are required to address the perturbation of the ion at the water surface.
 
 %
-From the results of nonlinear susceptibilities, I conclude that these water molecules at the interfaces of LiI, NaI, and KI solutions are participating
+From the results of nonlinear susceptibilities, we conclude that these water molecules at the interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the water/vapor interface.
 The origin of the characteristics comes from a unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
 
 
 %
-For the bulk and interfacial systems, I calculated the correlation functions of the HB population, 
+For the bulk and interfacial systems,we calculated the correlation functions of the HB population, 
 and obtained the reaction rate constants with the HB formation and breakage. 
 To analyze the HB dynamics at the water/vapor interface, 
 I proposed a new statistical scheme which is based on the interfacial HB population for the instantaneous interface.
@@ -361,11 +361,11 @@ The basic idea of this method is also applied to general interface systems, such
 The difference between the HB dynamics outside the first solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
 %They reflect the difference between HB dynamics in bulk water and that at the water/vapor interfaces.
-For the interface of alkaline iodine solutions, I also find that the cations does not alter the H-bonding network 
+For the interface of alkaline iodine solutions,we also find that the cations does not alter the H-bonding network 
 outside the first hydration shell of the cations themselves.
 %It is concluded that no long-range structural-changing effects for alkali metal cations.
-Through Solvation shell HB (SHB) dynamics, I obtained the HB dynamics for the H-Bonds between water molecules in and outside the ion's 
-first solvation shell. Similarly, I also calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions. 
+Through Solvation shell HB (SHB) dynamics, we obtained the HB dynamics for the H-Bonds between water molecules in and outside the ion's 
+first solvation shell. Similarly, we also calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions. 
 We found that the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
 In contrast, the HB dynamics for the H-bonds between water molecules in the solvation shell and outside the shell are not sensitive to the ions' nature.
 \end{abstract}
@@ -634,12 +634,12 @@ $\nu$ & vibrational frequency; vibrational quantum number& \\
 % Uncomment the lines as you write the Appendices
 
 %\include{Appendices/AppendixA}
-\include{chapters/chap_calculation/chap_calculation}
-\include{chapters/chap_cp2k/chap_cp2k}
-\include{chapters/chap_parameters/chap_parameters}
+\include{chapters/chap_susceptibility/chap_susceptibility}
+\include{chapters/chap_simulations/chap_simulations}
+\include{chapters/chap_structure/chap_structure}
 \include{chapters/chap_propensities/chap_propensities}
 \include{chapters/chap_thickness/chap_thickness}
-\include{chapters/chap_hbd_more/chap_hbd_more}
+\include{chapters/chap_hbd/chap_hbd}
 %\include{chapters/chap_hkt/chap_hkt}
 
 %----------------------------------------------------------------------------------------
