--- a/main.tex
+++ b/main.tex
@@ -342,7 +342,7 @@ and cannot provide a microscopic interpretation of the spectra.
 Realistic models of the interface are required to address the perturbation of the ion at the water surface.
 
 %
-From the results of nonlinear susceptibilities, we conclude that these water molecules at the interfaces of LiI, NaI, and KI solutions are participating
+From the results of nonlinear susceptibilities, we conclude that water molecules at the interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the water/vapor interface.
 The origin of the characteristics comes from a unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
@@ -353,21 +353,20 @@ For the bulk and interfacial systems,we calculated the correlation functions of 
 and obtained the reaction rate constants with the HB formation and breakage. 
 To analyze the HB dynamics at the water/vapor interface, 
 I proposed a new statistical scheme which is based on the interfacial HB population for the instantaneous interface.
-With the help of the HB population operator, one do not need to sample the molecules who are within the instantaneous interface, 
-i.e., no need to identify the molecules on the interface and calculate the statistical average for the interesting physical quantities. 
+With the help of this operator, one do not need to sample the molecules who are within the instantaneous interface, 
 Combining this method with molecule sampling on the interface, we can get more realistic and accurate HB dynamics for the water/vapor interface.
-The basic idea of this method is also applied to general interface systems, such as the solvation shells of ions in aqueous solutions.
+This method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
 %
-The difference between the HB dynamics outside the first solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
+The difference between the HB dynamics in the second solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
 %They reflect the difference between HB dynamics in bulk water and that at the water/vapor interfaces.
 For the interface of alkaline iodine solutions,we also find that the cations does not alter the H-bonding network 
 outside the first hydration shell of the cations themselves.
 %It is concluded that no long-range structural-changing effects for alkali metal cations.
-Through Solvation shell HB (SHB) dynamics, we obtained the HB dynamics for the H-Bonds between water molecules in and outside the ion's 
-first solvation shell. Similarly, we also calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions. 
+Through solvation shell HB (SHB) dynamics, we obtained the HB dynamics for the H-Bonds between water molecules in the ion's 
+second solvation shell. Similarly, we also calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions. 
 We found that the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
-In contrast, the HB dynamics for the H-bonds between water molecules in the solvation shell and outside the shell are not sensitive to the ions' nature.
+In contrast, the HB dynamics for the H-bonds between water molecules in the second solvation shell are not sensitive to the ions' nature.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
