--- a/main.tex
+++ b/main.tex
@@ -351,18 +351,16 @@ which form a double layer over the thickness on the order of 5--10 \A.
 %
 For the bulk and interfacial systems,we calculated the correlation functions of the HB population, 
 and obtained the reaction rate constants with the HB formation and breakage. 
-To analyze the HB dynamics at the water/vapor interface, 
-I proposed a new statistical scheme which is based on the interfacial HB population for the instantaneous interface.
-With the help of this operator, one do not need to sample the molecules who are within the instantaneous interface, 
-Combining this method with molecule sampling on the interface, we can get more realistic and accurate HB dynamics for the water/vapor interface.
+To analyze the HB dynamics at interfaces, 
+we determined the instantaneous interface with Willard and Chandler's method based on spatial density, 
+and proposed a new statistical scheme based on the interfacial HB population for the instantaneous interface.
+Combining this method with molecule sampling, we can get more realistic and accurate HB dynamics for the water/vapor interface.
 This method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
 %
 The difference between the HB dynamics in the second solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
-%They reflect the difference between HB dynamics in bulk water and that at the water/vapor interfaces.
 For the interface of alkaline iodine solutions,we also find that the cations does not alter the H-bonding network 
 outside the first hydration shell of the cations themselves.
-%It is concluded that no long-range structural-changing effects for alkali metal cations.
 Through solvation shell HB (SHB) dynamics, we obtained the HB dynamics for the H-Bonds between water molecules in the ion's 
 second solvation shell. Similarly, we also calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions. 
 We found that the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
