--- a/example.bib
+++ b/example.bib
@@ -9090,6 +9090,38 @@ number ={4},
 pages = {1780-1790},
 abstract= {{Vibrational sum frequency spectroscopy (VSFS) has been used to study the structure of water in contact to fused silica surfaces, hydrophobically modified with a series of alkyl trichlorosilane monolayers of varying degrees of order. The interfacial molecular structural information was complemented using total internal reflection (TIR) Raman spectroscopy. The silane molecules consisted of octadecyltrichlorosilane (OTS) and its shorter chain analogue with eight carbon atoms. The VSF spectra show a direct correlation between monolayer order and the intensity of the free OH mode, characteristic of straddling water molecules vibrating in direct contact to the hydrophobic layer, with a concurrent reduction of the bands associated with hydrogen bonded water molecules. The results imply that the structure of water in the most ordered monolayers is not much affected beyond the first layer of water molecules, with bulk isotropic properties becoming apparent already at subnanometer distances from the surface. Contact angle measurements with both water and hexadecane were also performed in an effort to relate macroscopically measurable parameters to the molecular surface structure provided by VSFS and TIR Raman. Only the receding contact angles, and in particular those with hexadecane, were found to correlate with the monolayer order. Finally, to obtain an additional insight into the water structure in direct contact to an ordered hydrophobic surface, isotopic dilution experiments with D2O were also performed. They indicate that the vibrational coupling mechanism of water molecules at the hydrophobized solid/water interface is different from what has been observed at the liquid/vapor interface.}}
 }
+@article{Zeiss1977,
+author = { G. D. Zeiss  and  William J. Meath},
+title = {Dispersion energy constants C$_6$(A,B), dipole oscillator strength sums and refractivities for Li, N, O, H$_2$, N$_2$, O$_2$, NH$_3$, H$_2$O, NO and N$_2$O},
+journal = {Molecular Physics},
+volume = {33},
+number = {4},
+pages = {1155-1176},
+year  = {1977},
+publisher = {Taylor \& Francis},
+doi = {10.1080/00268977700100991},
+URL = {https://doi.org/10.1080/00268977700100991},
+eprint = {https://doi.org/10.1080/00268977700100991}}
+Piatkowski, L., Zhang, Z., Backus, E. et al. Extreme surface propensity of halide ions in water. Nat Commun 5, 4083 (2014). https://doi.org/10.1038/ncomms5083
+@ARTICLE{Piatkowski2014,
+author = {Piatkowski, L. and Zhang, Z. and Backus, E. and Bakker, H. J. and Bonn, M.},
+title = {{Extreme surface propensity of halide ions in water}},
+journal = {Nat. Commun.},
+year = {2014},
+volume = {5},
+pages = {4083},
+url = {https://doi.org/10.1038/ncomms5083}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
 @ARTICLE{,
 author = {},
 title = {{}},
