--- a/main.tex
+++ b/main.tex
@@ -477,14 +477,14 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 
 % The \SI{}{} command is provided by the siunitx package, see its documentation for instructions on how to use it
 
-Avogadro constant & $N_{\text{A}}$ & 6.022 141 995 $\times 10^{23}$ mol \\
+Avogadro constant & $N_{\text{A}}$ & 6.022 140 76 $\times 10^{23}$ /mol (exact) \\
 %Constant Name & $Symbol$ & $Constant Value$ with units\\
-Boltzmann constant & $k_{\text{B}}$ & 1.380 650 32$\times 10^{23}$ \si{\joule\per\kelvin} \\
-elementary charge & $e$  & 1.602 176 462 6$\times 10^{-19}$ C \\
+Boltzmann constant & $k_{\text{B}}$ & 1.380 649 $\times 10^{23}$ \si{\joule\per\kelvin} (exact) \\
+elementary charge & $e$  & 1.602 176 634 $\times 10^{-19}$ C (exact)\\
 electron mass & $m_{\text{e}}$ & 9.109 381 887 $\times 10^{-31}$ kg \\
 molar gas constant & $R$ & 8.314 459 8 J mol$^{-1}$ K$^{-1}$,\\
 proton mass & $m_{\text{p}}$ & 1.672 621 581 $\times 10^{-27}$ kg \\
-Planck constant & $h$ & 6.626 070 15 $\times 10^{-34}$ J s \\
+Planck constant & $h$ & 6.626 070 15 $\times 10^{-34}$ J s (exact) \\
 reduced Planck constant & $\hbar$ & 1.054 571 817 $\times 10^{-34}$ J s\\
 speed of light in vacuum  & $c$ & \SI{299 792 458}{\meter\per\second} (exact)
 \end{constants}
@@ -508,7 +508,7 @@ ${\bf R}$ & atomic coordinates & \\
 $\tau_{\mathrm{a}}$ & average lifetime of H-bonds: $\langle\tau_{\mathrm{a}}\rangle = \int_0^\infty tP_{\mathrm{a}}(t) d t $ & \\
 $\mu_i$ &chemical potential of component $i$ & \\
 $\kappa_i$ & decay rate of $C_2(t)$ & \\
-$n_{\text{X}}$ & coordination number of ion X & \\
+$n_{\text{X}}$ & coordination number for ion X & \\
 $\delta_1$ & difference between the first peaks' positions of the RDFs $g_{X-O}$ and $g_{X-H}$ & \\
 ${\bf M}$ & dipole moment & \\
 $\mu^{i,l,\epsilon}$ & dipole moment of the bond $\epsilon$ of the $i$-th water molecule in the lab frame & \\
