--- a/example.bib
+++ b/example.bib
@@ -155,7 +155,6 @@
   issue = {3},
   pages = {600--603},
   year = {1999},
-  month = {Jan},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.82.600},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.82.600}
@@ -392,7 +391,6 @@
   volume = {66},
   issue = {8},
   pages = {085401},
-  numpages = {13},
   year = {2002},
   month = {Aug},
   publisher = {American Physical Society},
@@ -412,7 +410,6 @@
   volume = {85},
   issue = {4},
   pages = {768-771},
-  numpages = {0},
   year = {2000},
   month = {Jul},
   publisher = {American Physical Society},
@@ -537,7 +534,6 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
   volume = {76},
   issue = {6},
   pages = {928--931},
-  numpages = {0},
   year = {1996},
   month = {Feb},
   publisher = {American Physical Society},
@@ -651,7 +647,6 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
   volume = {73},
   issue = {12},
   pages = {1632--1635},
-  numpages = {0},
   year = {1994},
   month = {Sep},
   publisher = {American Physical Society},
@@ -682,16 +677,17 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     volume = {392},
     pages = {696}
 }
-@ARTICLE{FWS00,
-    author = {F. W. Starr and  J. K. Nielsen and H. Eugene Sta},
-    title = {{Hydrogen-Bond Dynamics for the Extended Simple Point-Charge Model of Water}},
-    journal = {Phys. Rev. E},
-    year = {2000},
-    volume = {62},
-    doi = {10.1103/physreve.62.579},
-    url = {https://www.ncbi.nlm.nih.gov/pubmed/11088494},
-    pages = {579-587}
-}
+!@ARTICLE{FWS00,
+!    author = {F. W. Starr and  J. K. Nielsen and H. Eugene Sta},
+!    title = {{Hydrogen-Bond Dynamics for the Extended Simple Point-Charge Model of Water}},
+!    journal = {Phys. Rev. E},
+!    year = {2000},
+!    volume = {62},
+!    issue = {1},
+!    doi = {10.1103/physreve.62.579},
+!    url = {https://www.ncbi.nlm.nih.gov/pubmed/11088494},
+!    pages = {579-587}
+!}
 @BOOK{DC87,
      author = {D. Chandler},
      title = {Introduction to Morden Statistical Mechanics},
@@ -748,7 +744,6 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
   issue = {20},
   pages = {4253--4256},
   year = {2000},
-  month = {Nov},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.85.4253},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.85.4253}
@@ -807,7 +802,6 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
    doi = {10.1021/jp8061509},
    issue = {13},
    journal = {J. Phys. Chem. B},
-   month = {11},
    pages = {4045-4053},
    publisher = {American Chemical Society},
    title = {Hydrogen Bond Dynamics at the Water/Hydrocarbon Interface},
@@ -871,9 +865,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
   volume = {47},
   issue = {1},
   pages = {558--561},
-  numpages = {0},
   year = {1993},
-  month = {Jan},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevB.47.558},
   abstract = {{(20K+)}},
@@ -885,7 +877,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     journal = {Adv. Chem. Phys.},
     year = {1975},
     volume = {31},
-    pages = {1}
+    pages = {1-101}
 }
 @ARTICLE{Stillinger1980,
     author = {F. H. Stillinger},
@@ -957,16 +949,13 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
   volume = {89},
   issue = {11},
   pages = {115505},
-  numpages = {4},
   year = {2002},
-  month = {Aug},
-  publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.89.115505},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.89.115505}
 }
 @article{Luzar1993,
 author = {Luzar,Alenka  and Chandler,David },
-title = {Structure and hydrogen bond dynamics of water-dimethyl sulfoxide mixtures by computer simulations},
+title = {Structure and Hydrogen Bond Dynamics of Water-Dimethyl Sulfoxide Mixtures by Computer Simulations},
 journal = {J. Chem. Phys.},
 volume = {98},
 number = {10},
@@ -1063,7 +1052,7 @@ URL = {https://doi.org/10.1063/1.464521},
 }
 @ARTICLE{Ujike99,
     author = {T. Ujike and Y. Tominaga and K. Mizoguchi},
-    title = {{Dynamical structure of water in alkali halide aqueous solutions}},
+    title = {{Dynamical Structure of Water in Alkali Halide Aqueous Solutions}},
     journal = {J. Chem. Phys.},
     year = {1999},
     volume = {110},
@@ -1141,7 +1130,7 @@ URL = {https://doi.org/10.1063/1.464521},
 }
 @ARTICLE{BianHT2008,
     author = {H. T. Bian and R. R. Feng and Y. Y. Xu and Y. Guo and H. F. Wang},
-    title = {{Increased interfacial thickness of the NaF, NaCl and NaBr salt aqueous solutions probed with non-resonant surface second harmonic generation (SHG)}},
+    title = {{Increased Interfacial Thickness of the NaF, NaCl and NaBr Salt Aqueous Solutions Probed with Non-Resonant Surface Second Harmonic Generation (SHG)}},
     journal = {Phys. Chem. Chem. Phys.},
     year = {2008},
     volume = {10},
@@ -1149,7 +1138,7 @@ URL = {https://doi.org/10.1063/1.464521},
 }
 @ARTICLE{FH1888,
     author = {F. Hofmeister},
-    title = {{Ueber die wasserentziehende Wirkung der Salze}},
+    title = {{Ueber die Wasserentziehende Wirkung der Salze}},
     journal = {Arch. Exp. Pathol. Pharmacol.},
     year = {1888},
     volume = {24},
@@ -1173,7 +1162,7 @@ URL = {https://doi.org/10.1063/1.464521},
 }
 @ARTICLE{GL99,
     author = {G. Lippert and J. Hutter and M. Parrinello},
-    title = {{The Gaussian and augmented-plane-wave density functional method for ab initio molecular dynamics simulations}},
+    title = {{The Gaussian and Augmented-Plane-Wave Density Functional Method for Ab Initio Molecular Dynamics Simulations}},
     journal = {Theor. Chem. Acc.},
     year = {1999},
     volume = {103},
@@ -1181,7 +1170,7 @@ URL = {https://doi.org/10.1063/1.464521},
 }
 @ARTICLE{MK05,
     author = {M. Krack},
-    title = {{Pseudopotentials for H to Kr optimized for gradient-corrected exchange-correlation functionals}},
+    title = {{Pseudopotentials for H to Kr Optimized for Gradient-Corrected Exchange-Correlation Functionals}},
     journal = {Theor. Chem. Acc.},
     year = {2005},
     volume = {114},
@@ -1284,7 +1273,7 @@ URL = {https://doi.org/10.1063/1.464521},
 }
 @ARTICLE{JL97,
     author = {J. Lu and J. A. Szpunar},
-    title = {{Applications of the embedded-atom method to glass formation and crystallization of liquid and glass transition-metal nickel}},
+    title = {{Applications of the Embedded-Atom Method to Glass Formation and Crystallization of Liquid and Glass Transition-Metal Nickel}},
     journal = {Phil. Mag. A},
     year = {1997},
     volume = {75},
@@ -1379,7 +1368,7 @@ URL = {https://doi.org/10.1063/1.464521},
 }
 @ARTICLE{DT08,
     author = {D. Tobias and J. C. Hemminger},
-    title = {{Getting specific about specific ion effects}},
+    title = {{Getting Specific about Specific Ion Effects}},
     journal = {Science},
     year = {2008},
     volume = {319},
@@ -4605,7 +4594,8 @@ year = {2004}
     year = {2000}
 }
 @article{Tongraar2006,
-    abstract = {On the basis of both HF and B3LYP methods, a well-defined first hydration shell of NO3- is obtainable, but the shell is quite flexible and the hydrogen-bond interactions between NO3- and water are rather weak.
+    abstract = {On the basis of both HF and B3LYP methods, a well-defined first hydration shell of NO$_3^-$ is obtainable, 
+but the shell is quite flexible and the hydrogen-bond interactions between NO3- and water are rather weak.
 },
     author = {Tongraar, A. and Tangkawanwanit, P. and Rode, B. M.},
     doi = {10.1021/jp064779w},
@@ -4628,7 +4618,7 @@ year = {2004}
     mendeley-groups = {HBD},
     number = {12},
     pages = {4334-4339},
-    title = {{QM/MM MD Simulations of Iodide Ion (I- ) in Aqueous Solution: A Delicate Balance Between Ion-Water and Water-Water H-bond Interactions}},
+    title = {{QM/MM MD Simulations of Iodide Ion (I$^-$) in Aqueous Solution: A Delicate Balance Between Ion-Water and Water-Water H-bond Interactions}},
     volume = {114},
     year = {2010}
 }
@@ -9111,6 +9101,102 @@ year = {2014},
 volume = {5},
 pages = {4083},
 url = {https://doi.org/10.1038/ncomms5083}
+}
+@ARTICLE{Stillinger1975,
+author = {F. H. Stillinger},
+title = {{Theory and molecular models for water}},
+journal = {Adv. Chem. Phys},
+year = {1975},
+volume = {31},
+pages = {1-101},
+doi = {10.1002/9780470143834.ch1},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9780470143834.ch1}
+}
+@ARTICLE{Geiger1984,
+author = {A. Geiger, P. Mausbach, J. Schnitker, R. L. Blumberg, and H. E. Stanley},
+title = {{Structure and dynamics of the hydrogen-bond network in water by computer simulations}},
+journal = {J. Phys. Colloq.},
+year = {1984},
+volume = {45},
+pages = {C7-13--C7-30},
+doi = {10.1051/jphyscol:1984702},
+url = {https://jphyscol.journaldephysique.org/articles/jphyscol/abs/1984/07/jphyscol198445C702/jphyscol198445C702.html}
+}
+@article{Zichi1986,
+author = {Zichi, Dominic A. and Rossky, Peter J. },
+title = {Solvent molecular dynamics in regions of hydrophobic hydration},
+journal = {J. Chem. Phys.},
+volume = {84},
+number = {5},
+pages = {2814-2822},
+year = {1986},
+doi = {10.1063/1.450307},
+URL = {https://doi.org/10.1063/1.450307}
+}
+@article{Starr2000,
+  title = {Hydrogen-bond dynamics for the extended simple point-charge model of water},
+  author = {Starr, Francis W. and Nielsen, Johannes K. and Stanley, H. Eugene},
+  journal = {Phys. Rev. E},
+  volume = {62},
+  issue = {1},
+  pages = {579--587},
+  year = {2000},
+  doi = {10.1103/PhysRevE.62.579},
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.62.579}
+}
+@ARTICLE{vanderSpoel2006,
+author = {van der Spoel, D. and van Maaren, P. J. and Larsson, P. and T\^{\i}mneanu, N.},
+title = {{Thermodynamics of Hydrogen Bonding in Hydrophilic and Hydrophobic Media}},
+journal = {J. Phys. Chem. B},
+year = {2006},
+volume = {110},
+number ={9},
+pages = {4393-4398},
+doi = {10.1021/jp0572535},
+url = {https://pubs.acs.org/doi/10.1021/jp0572535}
+}
+@article{Busch2021,
+author = {Busch,Johanna  and Neumann,Jan  and Paschek,Dietmar},
+title = {An Exact \emph{a posteriori} Correction for Hydrogen Bond Population Correlation Functions and Other Reversible Geminate Recombinations Obtained from Simulations with Periodic Boundary Conditions. Liquid Water as a Test Case},
+journal = {The Journal of Chemical Physics},
+volume = {154},
+number = {21},
+pages = {214501},
+year = {2021},
+doi = {10.1063/5.0053445},
+URL = { 
+        https://doi.org/10.1063/5.0053445
+}}
+@ARTICLE{Buckingham1968,
+author = {Buckingham, A. D. and Disch, R. L. and Dunmur, D. A.},
+title = {{Quadrupole Moments of Some Simple Molecules}},
+journal = {J. Am. Chem. Soc.},
+year = {1968},
+volume = {90},
+number ={12},
+pages = {3104–3107},
+doi= {doi:10.1021/ja01014a023},
+url = {https://pubs.acs.org/doi/pdf/10.1021/ja01014a023}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
+}
+@ARTICLE{,
+author = {},
+title = {{}},
+journal = {},
+year = {},
+volume = {},
+number ={},
+pages = {},
+abstract= {{ }}
 }
 @ARTICLE{,
 author = {},
