--- a/main.tex
+++ b/main.tex
@@ -317,10 +317,10 @@ Alkali Nitrate Aqueous Solutions from \abinitio Molecular Dynamics} % Your thesi
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 The interfacial structure and dynamics of solutions containing alkali nitrates have been studied by Density Functional Theory-based 
 Molecular Dynamics (DFTMD) simulations. In particular we have presented a detailed analysis of the Hydrogen Bond (HB) structure at the interface and 
-have calculated the interface vibrational spectra in order to provide a molecular interpretation of available experimental data.
+have calculated the interface vibrational spectra to provide a molecular interpretation of available experimental data.
 %
-When calculating the Vibrational Sum-Frequency Generation (VSFG) spectrum, we used a new approximation method. 
-This method ignores the NR part of the spectrum and finally obtains the interface's nonlinear polarizability to 
+When calculating the Vibrational Sum-Frequency Generation (VSFG) spectrum, we used a new approximation method, 
+from which we can obtain the interface's nonlinear polarizability to 
 infrared incident light through the velocity Auto-Correlation Function (ACF). 
 Based on the calculation of Maximally-Localized Wannier Functions (MLWFs), the parameterization of the spatial gradient of the components of dipole moment 
 and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
@@ -328,8 +328,8 @@ transformed into the calculation of the velocity ACF.
 The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental 
 Phase Sensitive Sum-Frequency Generation (PS-SFG) spectrum result.
 
-As a first system we have analyzed the behaviour of a salty interface containing LiNO$_3$.
-Both the measured and calculated VSFG spectra shows a reduced intensity of the lower frequency portion region,
+As a first system we have analyzed the behaviour of an aqueous interface containing LiNO$_3$.
+Both the measured and calculated VSFG spectra shows a reduced intensity in the lower frequency portion region,
 when compared to the water/vapor interface.
 This reduction is attributed to the Hydrogen (H-) bonds established between the \nitrate and the surrounding water molecules at the interface.
 This effects is only related to the presence of \nitrate at the water surface and is not affected by the presence of alkali metal ions.
@@ -337,7 +337,7 @@ This effects is only related to the presence of \nitrate at the water surface an
 %ion pair with \nit, its effect on the VSFG spectrum is not visible. The water molecule which mediate the interaction
 %between the \nitrate and the \Li would produce a red-shifted peak in small water cluster, but its influence is not visible
 %neither in the VSFG spectra.
-I have shown that the use of simple models, such as small cluster is not suitable to reproduce the experimental spectra 
+We have shown that the use of simple models, such as small cluster is not suitable to reproduce the experimental spectra 
 and cannot provide a microscopic interpretation of the spectra.
 Realistic models of the interface are required to address the perturbation of the ion at the water surface.
 
@@ -347,24 +347,27 @@ in weaker H-bonds, compared with those at the water/vapor interface.
 The origin of the characteristics comes from a unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
 
-
 %
 For the bulk and interfacial systems,we calculated the correlation functions of the HB population, 
 and obtained the reaction rate constants with the HB formation and breakage. 
 To analyze the HB dynamics at interfaces, 
 we determined the instantaneous interface with Willard and Chandler's method based on spatial density, 
-and proposed a new statistical scheme based on the interfacial HB population for the instantaneous interface.
-Combining this method with molecule sampling, we can get more realistic and accurate HB dynamics for the water/vapor interface.
-This method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
+and proposed a statistical scheme based on the interfacial HB (IHB) population for the instantaneous interface.
+Combining this method with interfacial molecule sampling, we can get more realistic HB dynamics for the water/vapor interface.
+The IHB method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
 %
-The difference between the HB dynamics in the second solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
+The difference between the HB dynamics in the first solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
-For the interface of alkaline iodine solutions,we also find that the cations does not alter the H-bonding network 
+For the interface of alkaline iodine solutions, we also find that the cations does not alter the H-bonding network 
 outside the first hydration shell of the cations themselves.
-Through solvation shell HB (SHB) dynamics, we obtained the HB dynamics for the H-Bonds between water molecules in the ion's 
-second solvation shell. Similarly, we also calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions. 
+Through solvation shell HB (SHB) dynamics, we obtained the HB dynamics for the H-bonds between water molecules in ion's 
+first and second solvation shell. Similarly, we calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions. 
 We found that the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
-In contrast, the HB dynamics for the H-bonds between water molecules in the second solvation shell are not sensitive to the ions' nature.
+In contrast, the HB dynamics for the H-bonds between water molecules in the first and the second solvation shell are not sensitive to the ions' nature.
+
+Finally, the distribution of the number of H-bonds of a OH group at a given instantaneous interface help us to understand the difference between the alkali nitrate
+solution/vapor and the water/vapor interfaces. In particular, the ratio of free OH bonds for interfaces affects the decay rate of the reorientation relaxation of water
+molecules and the $\Im \chi^{(2)}$ spectrum of the alkali nitrate interface.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -393,9 +396,8 @@ I feel very honored to be a teaching assistant in his quantum field theory cours
 
 %
 I am grateful to R\'emi Khatib for programing skills and helpful guidance on
-the programs for calculating the VSFG spectra. I also thank Shuanhu Qi, Jiajia Zhou and Fei Yu for useful discussions 
-on the the calculation of response functions. I would like to
-thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
+the programs for calculating the VSFG spectra. I also thank Shuanhu Qi, Jiajia Zhou and Fei Yu for useful discussions. 
+I would like to thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
 at the Institute for Physics, for their encouragement and assistance.
 
 %
@@ -452,7 +454,6 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 \textbf{H-} & \textbf{H}ydrogen\\
 \textbf{HB} & \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{HK} & \textbf{H}ohenberg-\textbf{K}ohn\\
-\textbf{SHB} & \textbf{S}olvation shell \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{IHB} & \textbf{I}nterface \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{KS} & \textbf{K}ohn-\textbf{S}ham\\
 \textbf{LDA} & \textbf{L}ocal \textbf{D}ensity \textbf{A}pproximation\\
@@ -462,6 +463,7 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 \textbf{PBE} & \textbf{P}erdew-\textbf{B}urke-\textbf{E}rnzherhof\\
 \textbf{PS} & \textbf{P}hase-\textbf{S}ensitive\\
 \textbf{RDF} & \textbf{R}adial \textbf{D}istribution \textbf{F}unction\\
+\textbf{SHB} & \textbf{S}olvation shell \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{SCF} & \textbf{S}elf \textbf{C}onsistent \textbf{F}ield\\
 \textbf{VDOS} & \textbf{V}ibrational \textbf{D}ensity \textbf{O}f \textbf{S}tates\\
 \textbf{VSFG} & \textbf{V}ibrational \textbf{S}um-\textbf{F}requency \textbf{G}eneration\\
@@ -546,6 +548,7 @@ $I_{\text{SFG}}$ & intensity of the sum-frequency generation beam & \\
 $I_{\text{vis}}$ & intensity of the incident visible beam & \\
 $I_{\text{IR}}$ & intensity of the incident infrared beam & \\
 $r_{\text{OO}}$ & interoxygen distance & \\
+${\delta}t$ & inverse sampling frequency & \\
 $\omega_{\text{e}}$ & the lowest electronic frequency &  \\
 $r_{\text{OO}}^{\text{c}}$ & the maximum value of the interoxygen distance (in the definition of HB) & \\
 $\phi^{\text{c}}$ & the maximum value of the angle between the O--O axis and one of the & \\
