--- a/example.bib
+++ b/example.bib
@@ -226,7 +226,7 @@
 }
 @ARTICLE{Marx2000,
     author = {D. Marx and J. Hutter},
-    title = {{Ab Initio Molecular Dynamics: Theory and Implemention}},
+    title = {{Ab Initio Molecular Dynamics: Theory and Implementation}},
     journal = {Modern Methods and Algorithms of Quantum Chemistry, J.Grotendorst (Ed.) John von Neumann Institute for Computing, J\"{u}lich, NIC Series},
     year = {2000},
     volume = {1},
@@ -1901,6 +1901,15 @@ journal = {J. Chem. Phys.},
 year = {2008},
 volume = {128},
 pages = {224511}
+}  
+@ARTICLE{Auer07,
+author = {B. Auer and R. Kumar and R. Schmidt and J. L. Skinner},
+title = {{ Hydrogen bonding and Raman, IR, and 2D-IR spectroscopy of dilute HOD in liquid D2O }},
+journal = {Proc. Natl. Acad. Sci. USA},
+year = {2007},
+volume = {104},
+number = {36},
+pages = {14215--14220}
 }  
 @ARTICLE{Yang10,
 author = {M. Yang and J. L. Sknner},
@@ -8066,7 +8075,7 @@ issn = {0010-4655},
 }
 @ARTICLE{Pegram06,
 title ={Partitioning of Atmospherically Relevant Ions between Bulk Water and the Water/Vapor Interface},
-journal ={PNAS},
+journal ={Proc. Natl. Acad. Sci. USA}, %PNAS
 volume = {103},
 number = {39},
 pages = {14278},
@@ -9178,35 +9187,82 @@ pages = {3104–3107},
 doi= {doi:10.1021/ja01014a023},
 url = {https://pubs.acs.org/doi/pdf/10.1021/ja01014a023}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {},
-volume = {},
-number ={},
-pages = {},
+@ARTICLE{Kim2009,
+author = {Kim,Yung Sam and Hochstrasser, Robin M.},
+title = {{Applications of 2D IR Spectroscopy to Peptides, Proteins, and Hydrogen-Bond Dynamics†}},
+journal = {J. Phys. Chem. B} 
+year = {2009},
+volume = {113},
+pages ={8231--8251},
+number = {24},
 abstract= {{ }}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {},
-volume = {},
-number ={},
-pages = {},
-abstract= {{ }}
+@ARTICLE{ZhangZhen2011,
+author = {Zhen Zhang and Lukasz Piatkowski and  Huib J. Bakker and Mischa Bonn},
+title = {{Ultrafast Vibrational Energy Transfer at the Water/Air Interface Revealed by Two-Dimensional Surface Vibrational Spectroscopy}},
+journal = {Nature Chem.},
+year = {2011},
+volume = {3},
+pages = {888--893}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {},
-volume = {},
-number ={},
-pages = {},
-abstract= {{ }}
+@article{ChenSH1984,
+  title = {Hydrogen-Bond Spectroscopy of Water by Neutron Scattering},
+  author = {Chen, Sow-Hsin and Toukan, Khaled and Loong, Chung-Keung and Price, David L. and Teixeira, Jos\'e},
+  journal = {Phys. Rev. Lett.},
+  volume = {53},
+  issue = {14},
+  pages = {1360--1363},
+  year = {1984},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.53.1360},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.53.1360}
+}
+@ARTICLE{Teixeira1990,
+author = {J. Teixeira  and M. -C Bellissent-Funel1},
+title = {{Dynamics of Water Studied by Neutron Scattering}},
+journal = {J. Phys.: Condens. Matter},
+year = {1990},
+volume = {2},
+number ={SA},
+pages = {105--108}
+}
+@article{Tarek02,
+  title = {Role of Protein-Water Hydrogen Bond Dynamics in the Protein Dynamical Transition},
+  author = {Tarek, M. and Tobias, D. J.},
+  journal = {Phys. Rev. Lett.},
+  volume = {88},
+  issue = {13},
+  pages = {138101},
+  year = {2002},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.88.138101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.88.138101}
+}
+@article{Matthias13,
+  title = {Spatial Dependence of Protein-Water Collective Hydrogen-Bond Dynamics},
+  author = {Heyden, Matthias and Tobias, Douglas J.},
+  journal = {Phys. Rev. Lett.},
+  volume = {111},
+  issue = {21},
+  pages = {218101},
+  year = {2013},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.111.218101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.111.218101}
+}
+@article{Kolano06,
+abstract = {X-ray crystallography and nuclear magnetic resonance measurements provide us with atomically resolved structures of an ever-growing number of biomolecules. These static structural snapshots are important to our understanding of biomolecular function, but real biomolecules are dynamic entities that often exploit conformational changes and transient molecular interactions to perform their tasks. Nuclear magnetic resonance methods can follow such structural changes, but only on millisecond timescales under non-equilibrium conditions. Time-resolved X-ray crystallography has recently been used to monitor the photodissociation of CO from myoglobin on a subnanosecond timescale, yet remains challenging to apply more widely. In contrast, two-dimensional infrared spectroscopy, which maps vibrational coupling between molecular groups and hence their relative positions and orientations, is now routinely used to study equilibrium processes on picosecond timescales. Here we show that the extension of this method into the non-equilibrium regime allows us to observe in real time in a short peptide the weakening of an intramolecular hydrogen bond and concomitant opening of a $\beta$-turn. We find that the rate of this process is two orders of magnitude faster than the 'folding speed limit' established for contact formation between protein side chains. {\textcopyright}2006 Nature Publishing Group.},
+author = {Kolano, Christoph and Helbing, Jan and Kozinski, Mariusz and Sander, Wolfram and Hamm, Peter},
+doi = {10.1038/nature05352},
+file = {:home/gang/Lib1--Sulpizi/Ref_by_name/Kolano06--nature05352.pdf:pdf},
+issn = {14764687},
+journal = {Nature},
+number = {7118},
+pages = {469--472},
+title = {{Watching hydrogen-bond dynamics in a $\beta$-turn by transient two-dimensional infrared spectroscopy}},
+volume = {444},
+year = {2006}
 }
 @ARTICLE{,
 author = {},
