--- a/main.tex
+++ b/main.tex
@@ -164,10 +164,10 @@ headsepline, % Uncomment to get a line under the header
 %
 \newcommand{\hbo}{$h(t)$\xspace}
 \newcommand{\hbos}{$h^\text{(s)}(t)$\xspace}
-\newcommand{\CHB}{$C_{\text{HB}}(t)$\xspace}
-\newcommand{\SHB}{$S_{\text{HB}}(t)$\xspace}
-\newcommand{\CSHB}{$C^\text{(s)}_{\text{HB}}(t)$\xspace}
-\newcommand{\SSHB}{$S^\text{(s)}_{\text{HB}}(t)$\xspace}
+\newcommand{\CHB}{$c(t)$\xspace}
+\newcommand{\SHB}{$s(t)$\xspace}
+\newcommand{\CSHB}{$c^\text{(s)}(t)$\xspace}
+\newcommand{\SSHB}{$s^\text{(s)}(t)$\xspace}
 \newcommand{\LiFourW}{[Li$\cdot$(H$_2$O)$_4$]$^+$}
 \newcommand{\rI}{$r_{\text{I}^-}$}
 \newcommand{\rcation}{$r_\text{cation}$}
@@ -319,20 +319,20 @@ The interfacial structure and dynamics of solutions containing alkali nitrates h
 Molecular Dynamics (DFTMD) simulations. In particular we have presented a detailed analysis of the Hydrogen Bond (HB) structure at the interface and 
 have calculated the interface vibrational spectra to provide a molecular interpretation of available experimental data.
 %
-When calculating the Vibrational Sum-Frequency Generation (VSFG) spectrum, we used a new approximation method, 
-from which we can obtain the interface's nonlinear polarizability to 
-infrared incident light through the velocity Auto-Correlation Function (ACF). 
-Based on the calculation of Maximally-Localized Wannier Functions (MLWFs), the parameterization of the spatial gradient of the components of dipole moment 
+When calculating the Vibrational Sum-Frequency Generation (VSFG) spectrum, 
+an approximation was used such that we can obtained the interface's nonlinear polarizability to 
+infrared incident light through the Velocity Auto-Correlation Function (VACF). 
+Based on the calculation of the Maximally-Localized Wannier Functions (MLWFs), the parameterization of the spatial gradient of the components of the dipole moment 
 and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
-transformed into the calculation of the velocity ACF.
+transformed into the calculation of the VACF.
 The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental 
 Phase Sensitive Sum-Frequency Generation (PS-SFG) spectrum result.
 
 As a first system we have analyzed the behaviour of an aqueous interface containing LiNO$_3$.
-Both the measured and calculated VSFG spectra shows a reduced intensity in the lower frequency portion region,
+Both the measured and calculated VSFG spectra shows a reduced intensity in the lower frequency portion,
 when compared to the water/vapor interface.
 This reduction is attributed to the Hydrogen (H-) bonds established between the \nitrate and the surrounding water molecules at the interface.
-This effects is only related to the presence of \nitrate at the water surface and is not affected by the presence of alkali metal ions.
+This effects is only related to the presence of the \nitrate at the water surface and is not affected by the presence of alkali metal ions.
 %I have shown that although the \Li can reside relative close to the water surface, also forming a water mediated
 %ion pair with \nit, its effect on the VSFG spectrum is not visible. The water molecule which mediate the interaction
 %between the \nitrate and the \Li would produce a red-shifted peak in small water cluster, but its influence is not visible
@@ -348,24 +348,24 @@ The origin of the characteristics comes from a unique distribution of \I ions an
 which form a double layer over the thickness on the order of 5--10 \A.
 
 %
-For the bulk and interfacial systems,we calculated the correlation functions of the HB population, 
+For the bulk and the interfacial systems,we calculated the correlation functions of the HB population, 
 and obtained the reaction rate constants with the HB formation and breakage. 
 To analyze the HB dynamics at interfaces, 
 we determined the instantaneous interface with Willard and Chandler's method based on spatial density, 
-and proposed a statistical scheme based on the interfacial HB (IHB) population for the instantaneous interface.
-Combining this method with interfacial molecule sampling, we can get more realistic HB dynamics for the water/vapor interface.
+and proposed a statistical scheme based on the interfacial HB (IHB) population operator for the instantaneous interface.
+Combining this method with Interfacial Molecule Sampling (IMS), we can get more realistic HB dynamics for the water/vapor interface.
 The IHB method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
 %
 The difference between the HB dynamics in the first solvation shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
 For the interface of alkaline iodine solutions, we also find that the cations does not alter the H-bonding network 
 outside the first hydration shell of the cations themselves.
-Through solvation shell HB (SHB) dynamics, we obtained the HB dynamics for the H-bonds between water molecules in ion's 
-first and second solvation shell. Similarly, we calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions. 
+Through the solvation shell HB (SHB) dynamics, we obtained that 
+the HB dynamics for the H-bonds between water molecules in the first and the second solvation shell are not sensitive to the ions' nature.
+In contrast, after we calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shells of ions, 
 We found that the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
-In contrast, the HB dynamics for the H-bonds between water molecules in the first and the second solvation shell are not sensitive to the ions' nature.
 
-Finally, the distribution of the number of H-bonds of a OH group at a given instantaneous interface help us to understand the difference between the alkali nitrate
+Finally, the distribution of the number of H-bonds of a OH group at a given instantaneous interface promotes our understanding of the difference between the alkali nitrate
 solution/vapor and the water/vapor interfaces. In particular, the ratio of free OH bonds for interfaces affects the decay rate of the reorientation relaxation of water
 molecules and the $\Im \chi^{(2)}$ spectrum of the alkali nitrate interface.
 \end{abstract}
@@ -401,7 +401,7 @@ I would like to thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena an
 at the Institute for Physics, for their encouragement and assistance.
 
 %
-I thank Astrid Chase and Daniela Reibel for their enthusiastic and patient help during my stay at the University of Mainz. Thanks to Andreas Nussbaumer  for providing technical support so that I can carry out the calculation smoothly.
+I thank Astrid Chase and Daniela Reibel for their enthusiastic and patient help during my stay at the University of Mainz. Thanks to Andreas Nussbaumer  for providing technical support.
 
 %
 I thank Prof. Honggang Luo, Prof. Haiping Fang and Prof. Haijun Zhou for their great help in my study during my doctoral studies. 
@@ -443,7 +443,6 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-\textbf{ACF} & \textbf{A}uto-\textbf{C}orrelation \textbf{F}unction\\
 \textbf{AIMD} & \abinitio \textbf{M}olecular \textbf{D}ynamics\\
 \textbf{BLYP} & \textbf{B}eck-\textbf{L}ee-\textbf{Y}ang-\textbf{P}arr\\
 \textbf{BOMD} & \textbf{B}orn-\textbf{O}ppenheimer \textbf{M}olecular \textbf{D}ynamics\\
@@ -465,6 +464,7 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 \textbf{RDF} & \textbf{R}adial \textbf{D}istribution \textbf{F}unction\\
 \textbf{SHB} & \textbf{S}olvation shell \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{SCF} & \textbf{S}elf \textbf{C}onsistent \textbf{F}ield\\
+\textbf{VACF} & \textbf{V}elocity \textbf{A}uto-\textbf{C}orrelation \textbf{F}unction\\
 \textbf{VDOS} & \textbf{V}ibrational \textbf{D}ensity \textbf{O}f \textbf{S}tates\\
 \textbf{VSFG} & \textbf{V}ibrational \textbf{S}um-\textbf{F}requency \textbf{G}eneration\\
 \textbf{XC} & e\textbf{X}change  and \textbf{C}orrelation\\
